Avoid trailing silence in AAC decodes with WebAudio.

FFmpeg won't strip any trailing audio data without end discard being
specified in the container, even if the container says the duration
of the last packet is smaller than what's decoded. In fact it mostly
just has hard coded values for the number samples coming out of the
decoding process unfortunately.

This change uses the packet duration information for AAC decodes to
drop the last few samples. Hopefully at some point in the future it
is possible for ffmpeg to do something smarter internally.

There is some risk to this approach. Media with invalid duration
information may now end up losing data. We may need to restrict this
workaround to just the last packet in a given stream.

This doesn't fix AAC audio decoded via <audio> or <video> tags, only
WebAudio's decodeAudioData(). FFmpegDemuxer (src=) and ChunkDemuxer
(MSE) don't agree on how packet duration is reported when applying
discard padding, so we can't use that duration to trim the packet.
Which isn't really a problem since plain src= tags can't splice
streams and MSE requires an explicit appendWindow for correctness.

BUG=668999
TEST=updated unittest expectations.

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I68d579a68ae476407b89f8398a892090d17c9edd
Reviewed-on: https://chromium-review.googlesource.com/1114094
Commit-Queue: Dale Curtis <dalecurtis@chromium.org>
Reviewed-by: Raymond Toy <rtoy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570460}
Former-commit-id: 75fe9b33ef2ec997b32582ef801ccc15c0fb34d7